Kotlin removed Ominous Pale Garden